# pion-educational-kits

./: Documentação-do-Software.md  Hardware-CanSat.md  Hardware-CubeSat.md  Hardware.md  LICENSE  README.md  Software-Advanced.md  Software.md  _Sidebar.md  _config.yml  boards.txt  index.md  package_pion_kit_index.json  platform.txt
libraries/Adafruit_MCP23017_Arduino_Library/: Adafruit_MCP23017.cpp
libraries/BMX-055/: BMX-055.cpp  BMX-055.h  LICENSE  README.md  library.json  library.properties
libraries/BMX-055/examples/Simple_IMU_Read/: Simple_IMU_Read.ino
libraries/BMx280MI/src/: BMx280MI.cpp  BMx280MI.h
libraries/PION/: keywords.txt  library.properties
libraries/PION/examples/CanSat-Blink-Led/: CanSat-Blink-Led.ino
libraries/PION/examples/CanSat-Blink-RGB/: CanSat-Blink-RGB.ino
libraries/PION/examples/CanSat-ChangeWiFi/: CanSat-ChangeWiFi.ino
libraries/PION/examples/CanSat-Original/: CanSat-Original.ino
libraries/PION/examples/CanSat-ReadSensors/: CanSat-ReadSensors.ino
libraries/PION/src/: PION_Interface.cpp  PION_Interface.h  PION_Network.cpp  PION_Network.h  PION_Sensors.cpp  PION_Sensors.h  PION_Storage.cpp  PION_Storage.h  PION_System.cpp  PION_System.h  _config.h  _types.h  webpage.h
libraries/uFire_SHT20/: CONTRIBUTING
libraries/uFire_SHT20/rust/: README.md
libraries/uFire_SHT20/src/: uFire_SHT20.cpp  uFire_SHT20.h
pion-kits-0.0.1/: platform.txt
pion-kits-0.0.2/: boards.txt
pion-kits-0.0.2/libraries/uFire_SHT20/: LICENSE  README.md  library.json  library.properties
pion-kits-0.0.2/libraries/uFire_SHT20/rust/: Cargo.toml
(+27 files in other folders)
